Fix z-index for cookie notice

--- a/assets/css/critical/50-cookie-consent.css
+++ b/assets/css/critical/50-cookie-consent.css
@@ -9,6 +9,7 @@
   padding: 1rem;
   position: fixed;
   right: 1rem;
+  z-index: 2000;
 
   @media (--md) {
     padding: 2.5rem;
